Move App.config under Utilities

--- a/Utilities/App.config
+++ b/Utilities/App.config
@@ -4,6 +4,6 @@
 		<add key="Browser" value="Chrome"/>
 		<add key="Environment" value="QA"/>
 		<add key="RunEnvironment" value="Local"/>
-		<add key="Server" value="http://horse.industryconnect.io/"/>
+		<add key="Server" value="horse.industryconnect.io"/>
 	</appSettings>
 </configuration>
